--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,8 @@ body
 }
 
 h1
-{
-	text-align: center;
+
+{	text-align: center;
 	margin-top: 3em;
 
 }
@@ -16,6 +16,19 @@ p
 {
 	text-align: center;
 	margin-bottom: 2px;
+}
+
+i
+{
+	padding-bottom: 1.25em;
+}
+
+
+div>i
+{
+
+	border-bottom-style: dashed;
+	display: block;
 }
 
 .dateTime
@@ -40,6 +53,8 @@ p
 	text-align: center;
 	border-radius: 5px;
 	border: solid, 2px, white;
+	color: white;
+
 }
 
 .articleNight
@@ -69,3 +84,8 @@ p
 	color: white;
 }
 
+#weather
+{
+	font-size: 3em;
+	text-align: left;
+}
