--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ p
 i
 {
 	
-	padding-bottom: 1.25em;
+	
 }
 
 
@@ -69,7 +69,7 @@ article>div
 .articleNight
 {
 	max-width: 50%;
-	height: 50%; 
+	height: 75%; 
 	color: #333;
 	background-color: rgba(255,255,255,0.5);
 	margin: auto;
@@ -99,4 +99,6 @@ article>div
 	font-size: 3em;
 	text-align: left;
 	padding-top: 1.25em;
+	position: relative;
+	bottom: 2em;
 }
