--- a/css/styles.css
+++ b/css/styles.css
@@ -28,11 +28,14 @@ i
 .iconBox
 {
 
-	padding-top: 2em;
-	border-bottom-style: dashed;
-	height: 30%;
+	/*padding-top: 2em;
+*/	border-top-style: dashed;
+	height: 0px;
 	width: 80%;
-	margin: auto;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 4em;
+	margin-top: 2.5em;
 }
 
 article>div
@@ -70,6 +73,7 @@ article>div
 {
 	max-width: 50%;
 	height: 75%; 
+	min-height: 400px;
 	color: #333;
 	background-color: rgba(255,255,255,0.5);
 	margin: auto;
