--- a/css/styles.css
+++ b/css/styles.css
@@ -65,15 +65,17 @@ article>div
 }
 .articleDay
 {
-	width: 20em;
-	height: 20em; 
+	max-width: 50%;
+	min-height: 400px; 
 	background-color: rgba(0,0,0,0.5);
 	margin: auto;
-	margin-top: 2em;
+	margin-top: 4em;
+	margin-bottom: 2em;
 	padding-top: 2em;
+	padding-bottom: 2em;
 	text-align: center;
 	border-radius: 5px;
-	border: solid, 2px, white;
+	border: solid 5px #555;
 	color: white;
 
 }
@@ -81,16 +83,17 @@ article>div
 .articleNight
 {
 	max-width: 50%;
-	
 	min-height: 400px;
 	color: #333;
 	background-color: rgba(255,255,255,0.5);
 	margin: auto;
-	margin-top: 2em;
+	margin-top: 4em;
+	margin-bottom: 2em;
 	padding-top: 2em;
+	padding-bottom: 2em;
 	text-align: center;
 	border-radius: 5px;
-	border: solid, 2px, white;
+	border: solid 5px white;
 
 }
 
@@ -116,6 +119,13 @@ article>div
 	bottom: 2em;
 }
 
+.tomorrow
+{
+	margin-top: -2em;
+
+	font-size: 2em;
+
+}
 
 /* ICONS ATTEMPT HERE */
 i {
@@ -125,6 +135,12 @@ i {
   font-weight: normal;
   font-style: normal;
   line-height: .5;
+}
+
+
+p>i
+{
+	font-size: 50px;
 }
 
 .icon-0:before { content: ":"; }
