--- a/css/styles.css
+++ b/css/styles.css
@@ -221,3 +221,21 @@ p>i
   text-align: center;
   text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.15);
 }
+
+
+@media screen and (max-width: 400px) {
+	.articleDay
+	{
+		min-width: 100%;
+		margin-left:0;
+		margin-right:0;
+	}
+
+	.articleNight
+	{
+		min-width: 100%;
+		margin-left:0;
+		margin-right:0;
+	}
+
+}
